# CPP2021-TD1

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md
include/: basicgoose.hpp  build_mama_icon.hpp  build_sniper_icon.hpp  build_tower_icon.hpp  buildicon.hpp  bullet.hpp  cruiseship.hpp  dokaani.hpp  editor.hpp  enemy.hpp  fyysikko.hpp  game.hpp  goldenbullet.hpp  grid.hpp  koneteekkari.hpp  kylteri.hpp  mamagoose.hpp  menu.hpp  plasmaball.hpp  poop.hpp  poopergoose.hpp  readme.md  shotgungoose.hpp  snipergoose.hpp  square_tower.hpp  tower.hpp
libs/: readme.md
plan/: plan-feedback-TD1.md
resources/: res.qrc
src/: basicgoose.cpp  build_mama_icon.cpp  build_sniper_icon.cpp  build_tower_icon.cpp  bullet.cpp  cruiseship.cpp  dokaani.cpp  editor.cpp  enemy.cpp  fyysikko.cpp  game.cpp  goldenbullet.cpp  koneteekkari.cpp  kylteri.cpp  main.cpp  mamagoose.cpp  menu.cpp  plasmaball.cpp  poop.cpp  poopergoose.cpp  readme.md  shotgungoose.cpp  snipergoose.cpp  square_tower.cpp  tower.cpp
tests/: CMakeLists.txt  readme.md
tests/test1/: main.cpp
tests/test2/: main.cpp
tests/test3/: main.cpp
